# vectorcode

./: .gitignore  AGENTS.md  BASELINE.md  Cargo.toml  Cross.toml  README.md  build.rs  improve_plan.md  install.ps1  install.sh  results_kimi.txt  results_mimo.txt  results_qwen.txt  roadmap_vectorcode.md  skills-lock.json  test_mcp.sh  vectorcode-asbuilt.md  vectorcode-spec.md
.agents/skills/semantic-search/: SKILL.md
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml
.vectorcode/: .gitignore  config.toml
baseline-dense/: BASELINE.md  results.json
baseline-hybrid/: BASELINE.md  results.json
baseline-hybrid-rerank/: BASELINE.md  results.json
baseline-sparse/: BASELINE.md  results.json
benchmarks/: CONTRIBUTING.md  README.md  corpus.toml  eval-dataset.json  phase1_precision.py  phase2_opencode.py  phase2_token_savings.py  phase3_context_bloat.py  phase3_opencode.py  requirements.txt  run_anthropic.py  run_openai.py  test_lib.py
benchmarks/_lib/: __init__.py  adapters.py  evaluators.py  parse_session.py  prompts.py  report.py  runner.py  tools.py
benchmarks/agent-eval/: parse-session.mjs
benchmarks/agent_eval/: .env.example  .gitignore  PLAN_PHASE2.md  README.md  implementation_plan_sota.md  package-lock.json  package.json  pnpm-lock.yaml
benchmarks/agent_eval/rubrics/: task-arch-trace.json  task-bug-hunt.json  task-status-command.json  task-symbol-lookup.json
benchmarks/agent_eval/scripts/: migrate-cache-paths.ts
benchmarks/baseline/: SCHEMA.md  baseline-mock-mini-structural.json  baseline-mock-mini.json  baseline-store-mock-mini.json
benchmarks/ctx_efficiency/: README.md
benchmarks/queries/: mini.toml  mini_structural.toml  mock-mini-structural.toml  mock-mini.toml  vscode.toml
benchmarks/results/: phase3_report.json
docs/: PLAN-mcp-stability-fixes.md  SECURITY.md  STATUS.md  audit-2026-06-11-exhaustive.md  audit-2026-06-11.md  bench-plan.md  benchmarks.md  plan-agent-ux.md
docs/adr/: 0001-store-choice.md
docs/pilar-status/: P1-local-first.md  P2-retrieval-medido.md  P3-estructura-ast-grafo.md  P4-escala-real.md  P5-arquitectura-contrato.md  P6-mcp-interfaz.md  P7-honestidad.md
homebrew/: vectorcode.rb
scripts/: inspector.sh  run-benchmarks.sh  verify-baseline.sh
sdd/benchmark-harness-fase1/: exploration.md
sdd/fase1-5-reranker/: exploration.md
sdd/vectorcode/: testing-capabilities
src/: error.rs  lib.rs  main.rs  types.rs
src/bench/: corpus.rs  metrics.rs  mod.rs  report.rs  runner.rs  schema.rs  store_bench.rs  verdict.rs
src/cli/: bench_store.rs  benchmark.rs  index.rs  init.rs  install.rs  mod.rs  outline.rs  search.rs  serve.rs  status.rs  status_mock.rs  uninstall.rs  upgrade.rs
src/config/: mod.rs  schema.rs
src/embedder/: gemini.rs  http.rs  mock.rs  mod.rs  model_manager.rs  ollama.rs  onnx.rs  openai.rs  openrouter.rs
src/engine/: chunker.rs  fusion.rs  graph_extractor.rs  graph_retriever.rs  indexer.rs  languages.rs  mod.rs  outliner.rs  router.rs  searcher.rs  sparse_searcher.rs
src/mcp/: handler.rs  mod.rs  schema.rs  security.rs  transport.rs
src/reranker/: mod.rs  onnx.rs
src/store/: chunks.rs  db.rs  files.rs  fts.rs  graph.rs  lancedb.rs  meta.rs  mod.rs  sqlite.rs  store.rs  vectors.rs
src/watcher/: gitignore.rs  mod.rs
tests/: chunker_integration_test.rs  hybrid_search_integration_test.rs  mcp_integration_test.rs  security_audit_cli.rs  security_audit_config.rs  security_audit_indexer.rs  security_audit_mcp.rs  sqlite_vec_syntax.rs  store_contract.rs
(+60 files in other folders)
