[package]
name = "vectorcode"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Semantic code search MCP server using embeddings"

[[bin]]
name = "vectorcode"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }

# Tree-sitter
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"

# ONNX Runtime
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }

# Tokenizer (for ONNX provider)
tokenizers = { version = "0.20", features = ["http"] }

# HTTP client (for API providers)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# File watching
notify = "7"
notify-debouncer-full = "0.4"

# .gitignore support
ignore = "0.4"

# Hashing
blake3 = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
