[package]
name = "vectorcode"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Semantic code search MCP server using embeddings"

[[bin]]
name = "vectorcode"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
sqlite-vec = "0.1.6"

# Tree-sitter
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"

# ONNX Runtime
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

# Tokenizer (for ONNX provider)
tokenizers = { version = "0.20", features = ["http"] }

# HTTP client (for API providers)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# File watching
notify = "7"
notify-debouncer-full = "0.4"

# .gitignore support
ignore = "0.4"

# Hashing
blake3 = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress bars
indicatif = "0.17"

# Async trait
async-trait = "0.1"

# MCP SDK
rmcp = { version = "0.8.1", features = ["server", "transport-io"] }
rmcp-macros = "0.8"
schemars = { version = "1.2", features = ["derive"] }

# Self-update
self-replace = "1"
semver = "1"
tar = "0.4"
flate2 = "1"
tempfile = "3"

# Platform directories (config paths)
dirs = "5"

# SHA256 checksum verification
sha2 = "0.10"

# Force vendored OpenSSL to avoid system dependency (needed for cross-compilation)
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
